<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/mrcat"
            android:contentDescription="@string/picture" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Resume_last_game"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_newGame"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_button_newgame"
        android:contentDescription="@string/newGame" />

    <ImageButton
        android:id="@+id/ib_resume"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/xml_button_resume"
        android:contentDescription="@string/resume" />

</LinearLayout>