<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_monsterPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boold" />

        <TextView
            android:id="@+id/tv_boold"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/special_skill" />

        <TextView
            android:id="@+id/tv_special_skill"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phisic_ant" />

        <TextView
            android:id="@+id/tv_phisic_ant"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/kill_getmoney" />

        <TextView
            android:id="@+id/tv_kill_getmoney"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kill_getscore" />

        <TextView
            android:id="@+id/tv_kill_getscore"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/move_speed" />

        <TextView
            android:id="@+id/tv_move_speed"
            style="@style/TextViewFormat_small2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/tv_monster_confirm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        style="@style/TextViewFormat"
        android:text="@string/confirm"
        android:background="@drawable/xml_button_pause"
        />

</LinearLayout>