<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/mrcat"
            android:contentDescription="@string/picture" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/is_quit"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_yesquit"
            style="@style/TextViewFormat"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/yes" />

        <TextView
            android:id="@+id/tv_noquit"
            style="@style/TextViewFormat"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>