<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_upgrade_skills"
    android:layout_width="match_parent"
    android:layout_height="60dp"
     >

    <LinearLayout
        android:id="@+id/ll_upgrade_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/upgradeback"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_delete"
            style="@style/TextViewFormat_small"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/xml_upgrade_sell"
            android:gravity="bottom|center_horizontal"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="25dp"
                    android:background="@drawable/sword"
                    android:contentDescription="@string/sword_picture" />

                <TextView
                    android:id="@+id/tv_attackValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/TextViewFormat_small2"
                     />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_skillLevelShow"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="22dp"
                    android:background="@drawable/icon_lvl"
                    android:contentDescription="@string/level_picture" />

                <TextView
                    android:id="@+id/tv_levelValue"
                    style="@style/TextViewFormat_small2"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_height="22dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_upgrade_back"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@drawable/xml_button_game_back"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/back" />

</RelativeLayout>